# rsfchat

./: Cargo.toml  LICENSE
src/: app.rs  config.rs  controller.rs  error.rs  io.rs  main.rs  message.rs  tabs.rs  ticket.rs  tui.rs  ui.rs  widgets.rs
src/tabs/: dropping_buf.rs  messages.rs  mod.rs
src/ui/: backend.rs  input.rs  mod.rs
