[package]
authors = ["Effnote <effnote@gmail.com>"]
name = "rsfchat"
version = "0.0.2"
edition = "2021"

[dependencies]
chrono = "0.4.10"
cursive = "0.20.0"
futures = "0.3.1"
derive_more = "0.99.18"
tokio-stream = "0.1.15"

[dependencies.tokio]
version = "1.38.0"
features = ["full"]

[dependencies.fchat]
git = "https://github.com/effnote/libfchat"
